Adicionei um parafrago

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,8 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laudantium, quidem consequuntur pariatur minima ullam nam quasi veniam saepe exercitationem. Esse delectus optio autem pariatur, distinctio cum voluptatibus quis sapiente.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laudantium, quidem consequuntur pariatur minima ullam nam quasi veniam saepe exercitationem. Esse delectus optio autem pariatur, distinctio cum voluptatibus quis sapiente.</p>
+    
 </body>
 </html>
